// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .opinionContentContainerClass {
  min-height: 250px;
}

.c3 .opinionImageContainerClass {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  bottom: -9px;
  min-width: 100px;
  position: absolute;
  right: 0;
}

.c3 .supportImageContainerClass {
  display: none;
}

.c3 .supportSummaryClass {
  display: none;
}

.c3 .summaryHidden {
  display: none;
}

.c3 .opinionSummary125Class {
  display: block;
  padding-right: 20px;
  width: 60%;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c4 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:520px) {
  .c3 .opinionContentContainerClass {
    min-height: 200px;
  }

  .c3 .opinionHeadlineClass {
    padding-right: 30px;
    width: 80%;
  }
}

@media (min-width:520px) {
  .c2 .opinionImageContainerClass {
    min-width: 130px;
  }
}

@media (min-width:768px) {
  .c1 .opinionBylineClass,
  .c1 .opinionHeadlineClass {
    font-size: 30px;
    line-height: 30px;
    width: 100%;
  }

  .c1 .opinionContentContainerClass {
    min-width: auto;
    padding-right: 55px;
  }

  .c1 .opinionImageContainerClass {
    max-width: 167px;
    min-width: auto;
    position: relative;
  }

  .c1 .supportImageContainerClass {
    display: block;
  }
}

@media (min-width:768px) {
  .c0 .opinionImageContainerClass {
    min-width: auto;
  }

  .c0 .opinionSummary125Class {
    display: none;
  }

  .c0 .opinionSummary160Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    width: 80.8%;
  }

  .c5 a {
    display: block;
    height: 100%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c8 a > div,
  .c8 a > div > div {
    height: 100%;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    border-bottom: none;
    margin-bottom: 0;
    min-width: auto;
    padding-bottom: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

<style>
{
  "S1": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 c1 c2 c3 S1"
>
  <div
    className="c4 S1"
  >
    <div
      className="c5 S1"
    >
      <div
        className="c6 c7 c8 S1"
      >
        <div
          className="S1"
        >
          opinion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. two child elements 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 .opinionContentContainerClass {
  min-height: 250px;
}

.c4 .opinionImageContainerClass {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  bottom: -9px;
  min-width: 100px;
  position: absolute;
  right: 0;
}

.c4 .supportImageContainerClass {
  display: none;
}

.c4 .supportSummaryClass {
  display: none;
}

.c4 .summaryHidden {
  display: none;
}

.c4 .opinionSummary125Class {
  display: block;
  padding-right: 20px;
  width: 60%;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c10 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: auto;
  padding-left: 10px;
  padding-right: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c5 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:520px) {
  .c4 .opinionContentContainerClass {
    min-height: 200px;
  }

  .c4 .opinionHeadlineClass {
    padding-right: 30px;
    width: 80%;
  }
}

@media (min-width:520px) {
  .c3 .opinionImageContainerClass {
    min-width: 120px;
  }
}

@media (min-width:768px) {
  .c2 .opinionBylineClass,
  .c2 .opinionHeadlineClass {
    font-size: 30px;
    line-height: 30px;
    width: 100%;
  }

  .c2 .opinionContentContainerClass {
    min-width: auto;
    padding-right: 55px;
  }

  .c2 .opinionImageContainerClass {
    max-width: 167px;
    min-width: auto;
    position: relative;
  }

  .c2 .supportImageContainerClass {
    display: block;
  }
}

@media (min-width:768px) {
  .c1 .opinionImageContainerClass {
    min-width: 165px;
  }

  .c1 .opinionSummary125Class {
    display: none;
  }

  .c1 .opinionSummary145Class {
    display: block;
  }
}

@media (min-width:1024px) {
  .c0 .opinionSummary125Class,
  .c0 .opinionSummary145Class {
    display: none;
  }

  .c0 .opinionSummary225Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    width: 100%;
  }

  .c6 a {
    display: block;
    height: 100%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c9 a > div,
  .c9 a > div > div {
    height: 100%;
  }
}

@media (min-width:768px) {
  .c8 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 3;
    -webkit-flex-grow: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:1024px) {
  .c7 {
    border-bottom: none;
    margin-bottom: 0;
    min-width: auto;
    padding-bottom: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c10 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    display: block;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:1024px) {
  .c10 {
    display: block;
  }
}

@media (min-width:768px) {
  .c12 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c11 {
    min-width: 400px;
  }
}

@media (min-width:768px) {
  .c16 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c15 {
    padding-left: 10px;
  }
}

@media (min-width:768px) {
  .c14 {
    max-width: 100%;
  }
}

@media (min-width:1024px) {
  .c13 {
    padding-left: 10px;
  }
}

<style>
{
  "S1": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 c1 c2 c3 c4 S1"
>
  <div
    className="c5 S1"
  >
    <div
      className="c6 S1"
    >
      <div
        className="c7 c8 c9 S1"
      >
        <div
          className="S1"
        >
          opinion
        </div>
      </div>
      <div
        className="c10 S1"
      />
      <div
        className="c11 c12 S1"
      >
        <div
          className="c13 c14 c15 c16 S1"
        >
          <div
            className="S1"
          >
            support-1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. three child elements 1`] = `
.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .opinionContentContainerClass {
  min-height: 250px;
}

.c3 .opinionImageContainerClass {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  bottom: -9px;
  min-width: 100px;
  position: absolute;
  right: 0;
}

.c3 .supportImageContainerClass {
  display: none;
}

.c3 .supportSummaryClass {
  display: none;
}

.c3 .summaryHidden {
  display: none;
}

.c3 .opinionSummary125Class {
  display: block;
  padding-right: 20px;
  width: 60%;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c10 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: auto;
  padding-left: 10px;
  padding-right: 10px;
}

.c21 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: auto;
  padding-left: 10px;
  padding-right: 10px;
}

.c20 {
  border-top-color: #DBDBDB;
  border-top-style: solid;
  border-top-width: 1px;
  margin-top: 10px;
  padding-top: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c4 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:520px) {
  .c3 .opinionContentContainerClass {
    min-height: 200px;
  }

  .c3 .opinionHeadlineClass {
    padding-right: 30px;
    width: 80%;
  }
}

@media (min-width:520px) {
  .c2 .opinionImageContainerClass {
    min-width: 120px;
  }
}

@media (min-width:768px) {
  .c1 .opinionBylineClass,
  .c1 .opinionHeadlineClass {
    font-size: 30px;
    line-height: 30px;
    width: 100%;
  }

  .c1 .opinionContentContainerClass {
    min-width: auto;
    padding-right: 55px;
  }

  .c1 .opinionImageContainerClass {
    max-width: 167px;
    min-width: auto;
    position: relative;
  }

  .c1 .supportImageContainerClass {
    display: block;
  }
}

@media (min-width:768px) {
  .c0 .opinionImageContainerClass {
    min-width: 152px;
  }

  .c0 .opinionSummary125Class {
    display: none;
  }

  .c0 .opinionSummary160Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    width: 80.8%;
  }

  .c5 a {
    display: block;
    height: 100%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c9 a > div,
  .c9 a > div > div {
    height: 100%;
  }
}

@media (min-width:768px) {
  .c8 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c7 {
    border-bottom-color: #DBDBDB;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    margin-bottom: 10px;
    min-width: 100%;
    padding-bottom: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    border-bottom: none;
    margin-bottom: 0;
    min-width: auto;
    padding-bottom: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c10 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    display: none;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:1024px) {
  .c10 {
    display: block;
  }
}

@media (min-width:768px) {
  .c13 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c12 {
    min-width: 100%;
  }
}

@media (min-width:1024px) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:768px) {
  .c17 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c16 {
    padding-left: 0;
  }
}

@media (min-width:768px) {
  .c15 {
    max-width: 50%;
  }
}

@media (min-width:1024px) {
  .c14 {
    padding-left: 10px;
  }
}

@media (min-width:768px) {
  .c21 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c20 {
    border-left-color: #DBDBDB;
    border-left-style: solid;
    border-left-width: 1px;
    border-top: none;
    margin-left: 10px;
    margin-top: 0;
    padding-right: 0;
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c19 {
    max-width: 50%;
  }
}

@media (min-width:1024px) {
  .c18 {
    padding-left: 10px;
  }
}

<style>
{
  "S1": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 c1 c2 c3 S1"
>
  <div
    className="c4 S1"
  >
    <div
      className="c5 S1"
    >
      <div
        className="c6 c7 c8 c9 S1"
      >
        <div
          className="S1"
        >
          opinion
        </div>
      </div>
      <div
        className="c10 S1"
      />
      <div
        className="c11 c12 c13 S1"
      >
        <div
          className="c14 c15 c16 c17 S1"
        >
          <div
            className="S1"
          >
            support-1
          </div>
        </div>
        <div
          className="c18 c19 c20 c21 S1"
        >
          <div
            className="S1"
          >
            support-2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
